crates/nexus/tests/compile_fail/wrong_event_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/wrong_event_type.rs:56:16
   |
56 |     user.apply(OrderEvent::Placed);
   |          ----- ^^^^^^^^^^^^^^^^^^ expected `UserEvent`, found `OrderEvent`
   |          |
   |          arguments to this method are incorrect
   |
note: method defined here
  --> src/aggregate.rs
   |
   |     pub fn apply(&mut self, event: EventOf<A>) {
   |            ^^^^^
